--- a/aplicacion/documento_aps.qmd
+++ b/aplicacion/documento_aps.qmd
@@ -3,7 +3,7 @@ title: "Efectos de la legislación ecuatoriana sobre el pago efectivo del impues
 subtitle: "Estudio sobre el anexo de participes, accionistas, miembros de directorio y administratores (APS) en el periodo 2012 - 2020"
 author: "Alex Bajaña"
 format: html
-editor: visual
+editor: visua
 ---
 
 ## Versión de R
